<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basic_visualization_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thevarunshah.trianglealgorithmvisualization.free.BasicVisualization"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_ll_layout2"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/x"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black"
            android:id="@+id/xcoord_text"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/xcoord_input"
            android:entries="@array/coordinates"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/y"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textColor="@android:color/black"
            android:id="@+id/ycoord_text"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/ycoord_input"
            android:entries="@array/coordinates"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <Button
            android:text="@string/add"
            android:textSize="22sp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/addpoint_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/button_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bottom_ll_layout2"
        android:layout_above="@+id/bottom_ll_layout">

        <Button
            android:text="@string/done_verticies"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/verticies_done_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/button_border"
            android:layout_margin="5dp"/>
        <Button
            android:text="@string/reset_p"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/reset_p_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/button_border"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bottom_ll_layout"
        android:layout_alignParentBottom="true">

        <Button
            android:text="@string/save_image"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/save_image_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/button_border"
            android:layout_margin="5dp"/>

        <Button
            android:text="@string/reset"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/button_border"
            android:layout_margin="5dp"/>
    </LinearLayout>
</RelativeLayout>
