<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homescreen_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context="com.thevarunshah.trianglealgorithmvisualization.free.HomeScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_app_logo"
        android:id="@+id/app_logo_image"
        android:layout_marginBottom="25dp"
        android:contentDescription="A Visualization"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_linear_layout"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:text="@string/basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/basic_visualization"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/button_border"/>

        <Button
            android:text="@string/gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_margin="5dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/gradient_visualization"
            android:background="@drawable/button_border"/>

        <Button
            android:text="@string/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/about"
            android:background="@drawable/button_border"/>

    </LinearLayout>

</LinearLayout>
